{
  "version": 4,
  "terraform_version": "1.8.1",
  "serial": 317,
  "lineage": "b0b12502-f4ce-9bd2-f43c-1f2e4bbe4d00",
  "resources": [
    {
      "module": "module.lb",
      "mode": "managed",
      "type": "google_compute_backend_service",
      "name": "default",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "affinity_cookie_ttl_sec": 0,
            "backend": [
              {
                "balancing_mode": "UTILIZATION",
                "capacity_scaler": 1,
                "group": "https://www.googleapis.com/compute/v1/projects/playground-s-11-8d8bd822/zones/us-east1-b/instanceGroups/lb-backend-example",
                "max_connections": 0,
                "max_connections_per_endpoint": 0,
                "max_connections_per_instance": 0,
                "max_rate": 0,
                "max_rate_per_endpoint": 0,
                "max_rate_per_instance": 0,
                "max_utilization": 0
              }
            ],
            "connection_draining_timeout_sec": 0,
            "creation_timestamp": "2024-05-23T07:12:31.504-07:00",
            "enable_cdn": false,
            "fingerprint": "adcZPSCj7vE=",
            "generated_id": 7127175975122694176,
            "health_checks": [
              "projects/playground-s-11-8d8bd822/global/healthChecks/loppffr-test"
            ],
            "id": "projects/playground-s-11-8d8bd822/global/backendServices/web-backend-service",
            "load_balancing_scheme": "EXTERNAL_MANAGED",
            "name": "web-backend-service",
            "port_name": "http",
            "project": "playground-s-11-8d8bd822",
            "protocol": "HTTP",
            "self_link": "https://www.googleapis.com/compute/v1/projects/playground-s-11-8d8bd822/global/backendServices/web-backend-service",
            "session_affinity": "NONE",
            "timeout_sec": 30
          },
          "dependencies": [
            "module.lb.google_compute_health_check.hc",
            "module.lb.google_compute_instance_group_manager.default",
            "module.lb.google_compute_instance_template.default",
            "module.vpc.google_compute_network.vpc_network"
          ]
        }
      ]
    },
    {
      "module": "module.lb",
      "mode": "managed",
      "type": "google_compute_firewall",
      "name": "default",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "allow": [
              {
                "ports": [
                  "80"
                ],
                "protocol": "tcp"
              }
            ],
            "creation_timestamp": "2024-05-23T07:11:54.024-07:00",
            "deny": [],
            "description": "",
            "destination_ranges": [],
            "direction": "INGRESS",
            "disabled": false,
            "enable_logging": null,
            "id": "projects/playground-s-11-8d8bd822/global/firewalls/fw-allow-health-check",
            "log_config": [],
            "name": "fw-allow-health-check",
            "network": "https://www.googleapis.com/compute/v1/projects/playground-s-11-8d8bd822/global/networks/lo",
            "priority": 1000,
            "project": "playground-s-11-8d8bd822",
            "self_link": "https://www.googleapis.com/compute/v1/projects/playground-s-11-8d8bd822/global/firewalls/fw-allow-health-check",
            "source_ranges": [
              "130.211.0.0/22",
              "35.191.0.0/16"
            ],
            "source_service_accounts": null,
            "source_tags": null,
            "target_service_accounts": null,
            "target_tags": [
              "allow-health-check"
            ],
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.google_compute_network.vpc_network"
          ]
        }
      ]
    },
    {
      "module": "module.lb",
      "mode": "managed",
      "type": "google_compute_global_address",
      "name": "default",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "address": "34.36.252.194",
            "address_type": "EXTERNAL",
            "creation_timestamp": "2024-05-23T07:11:09.766-07:00",
            "id": "projects/playground-s-11-8d8bd822/global/addresses/lb-ipv4-1",
            "name": "lb-ipv4-1",
            "prefix_length": 0,
            "project": "playground-s-11-8d8bd822",
            "self_link": "https://www.googleapis.com/compute/v1/projects/playground-s-11-8d8bd822/global/addresses/lb-ipv4-1"
          }
        }
      ]
    },
    {
      "module": "module.lb",
      "mode": "managed",
      "type": "google_compute_global_forwarding_rule",
      "name": "default",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "projects/playground-s-11-8d8bd822/global/forwardingRules/http-content-rule",
            "ip_address": "34.36.252.194",
            "ip_protocol": "TCP",
            "label_fingerprint": "42WmSpB8rSM=",
            "load_balancing_scheme": "EXTERNAL_MANAGED",
            "name": "http-content-rule",
            "port_range": "80-80",
            "project": "playground-s-11-8d8bd822",
            "self_link": "https://www.googleapis.com/compute/v1/projects/playground-s-11-8d8bd822/global/forwardingRules/http-content-rule",
            "target": "https://www.googleapis.com/compute/v1/projects/playground-s-11-8d8bd822/global/targetHttpProxies/http-lb-proxy"
          },
          "dependencies": [
            "module.lb.google_compute_backend_service.default",
            "module.lb.google_compute_global_address.default",
            "module.lb.google_compute_health_check.hc",
            "module.lb.google_compute_instance_group_manager.default",
            "module.lb.google_compute_instance_template.default",
            "module.lb.google_compute_target_http_proxy.default",
            "module.lb.google_compute_url_map.default",
            "module.vpc.google_compute_network.vpc_network"
          ]
        }
      ]
    },
    {
      "module": "module.lb",
      "mode": "managed",
      "type": "google_compute_target_http_proxy",
      "name": "default",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "creation_timestamp": "2024-05-23T07:13:18.228-07:00",
            "http_keep_alive_timeout_sec": 0,
            "id": "projects/playground-s-11-8d8bd822/global/targetHttpProxies/http-lb-proxy",
            "name": "http-lb-proxy",
            "project": "playground-s-11-8d8bd822",
            "proxy_bind": false,
            "proxy_id": 2248961019498131473,
            "self_link": "https://www.googleapis.com/compute/v1/projects/playground-s-11-8d8bd822/global/targetHttpProxies/http-lb-proxy",
            "url_map": "https://www.googleapis.com/compute/v1/projects/playground-s-11-8d8bd822/global/urlMaps/web-map-http"
          },
          "dependencies": [
            "module.lb.google_compute_backend_service.default",
            "module.lb.google_compute_health_check.hc",
            "module.lb.google_compute_instance_group_manager.default",
            "module.lb.google_compute_instance_template.default",
            "module.lb.google_compute_url_map.default",
            "module.vpc.google_compute_network.vpc_network"
          ]
        }
      ]
    },
    {
      "module": "module.lb",
      "mode": "managed",
      "type": "google_compute_url_map",
      "name": "default",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "creation_timestamp": "2024-05-23T07:13:05.894-07:00",
            "default_route_action": [],
            "default_service": "https://www.googleapis.com/compute/v1/projects/playground-s-11-8d8bd822/global/backendServices/web-backend-service",
            "default_url_redirect": [],
            "description": "",
            "fingerprint": "bCfkcxsWZWE=",
            "header_action": [],
            "host_rule": [],
            "id": "projects/playground-s-11-8d8bd822/global/urlMaps/web-map-http",
            "map_id": 3012345835219513374,
            "name": "web-map-http",
            "path_matcher": [],
            "project": "playground-s-11-8d8bd822",
            "self_link": "https://www.googleapis.com/compute/v1/projects/playground-s-11-8d8bd822/global/urlMaps/web-map-http",
            "test": [],
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.lb.google_compute_backend_service.default",
            "module.lb.google_compute_health_check.hc",
            "module.lb.google_compute_instance_group_manager.default",
            "module.lb.google_compute_instance_template.default",
            "module.vpc.google_compute_network.vpc_network"
          ]
        }
      ]
    },
    {
      "module": "module.my_subnet[\"sub1\"]",
      "mode": "managed",
      "type": "google_compute_subnetwork",
      "name": "subnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "creation_timestamp": "2024-05-23T07:11:55.685-07:00",
            "gateway_address": "10.0.0.1",
            "id": "projects/playground-s-11-8d8bd822/regions/us-west1/subnetworks/hr",
            "ip_cidr_range": "10.0.0.0/16",
            "name": "hr",
            "network": "https://www.googleapis.com/compute/v1/projects/playground-s-11-8d8bd822/global/networks/lo",
            "private_ip_google_access": false,
            "private_ipv6_google_access": "DISABLE_GOOGLE_ACCESS",
            "project": "playground-s-11-8d8bd822",
            "purpose": "PRIVATE",
            "region": "us-west1",
            "self_link": "https://www.googleapis.com/compute/v1/projects/playground-s-11-8d8bd822/regions/us-west1/subnetworks/hr",
            "stack_type": "IPV4_ONLY"
          },
          "dependencies": [
            "module.vpc.google_compute_network.vpc_network"
          ]
        }
      ]
    },
    {
      "module": "module.my_subnet[\"sub2\"]",
      "mode": "managed",
      "type": "google_compute_subnetwork",
      "name": "subnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "creation_timestamp": "2024-05-23T07:11:57.314-07:00",
            "gateway_address": "10.1.0.1",
            "id": "projects/playground-s-11-8d8bd822/regions/us-west1/subnetworks/tech",
            "ip_cidr_range": "10.1.0.0/16",
            "name": "tech",
            "network": "https://www.googleapis.com/compute/v1/projects/playground-s-11-8d8bd822/global/networks/lo",
            "private_ip_google_access": false,
            "private_ipv6_google_access": "DISABLE_GOOGLE_ACCESS",
            "project": "playground-s-11-8d8bd822",
            "purpose": "PRIVATE",
            "region": "us-west1",
            "self_link": "https://www.googleapis.com/compute/v1/projects/playground-s-11-8d8bd822/regions/us-west1/subnetworks/tech",
            "stack_type": "IPV4_ONLY"
          },
          "dependencies": [
            "module.vpc.google_compute_network.vpc_network"
          ]
        }
      ]
    },
    {
      "module": "module.nat_gateway",
      "mode": "managed",
      "type": "google_compute_router",
      "name": "nat_router",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "bgp": [
              {
                "advertise_mode": "DEFAULT",
                "asn": 64514,
                "keepalive_interval": 20
              }
            ],
            "creation_timestamp": "2024-05-23T07:11:55.111-07:00",
            "encrypted_interconnect_router": false,
            "id": "projects/playground-s-11-8d8bd822/regions/us-west1/routers/my-natnat-gateway-router",
            "name": "my-natnat-gateway-router",
            "network": "https://www.googleapis.com/compute/v1/projects/playground-s-11-8d8bd822/global/networks/lo",
            "project": "playground-s-11-8d8bd822",
            "region": "us-west1",
            "self_link": "https://www.googleapis.com/compute/v1/projects/playground-s-11-8d8bd822/regions/us-west1/routers/my-natnat-gateway-router"
          },
          "dependencies": [
            "module.vpc.google_compute_network.vpc_network"
          ]
        }
      ]
    },
    {
      "module": "module.nat_gateway",
      "mode": "managed",
      "type": "google_compute_router_nat",
      "name": "nat_gateway",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "enable_dynamic_port_allocation": false,
            "enable_endpoint_independent_mapping": false,
            "endpoint_types": [
              "ENDPOINT_TYPE_VM"
            ],
            "icmp_idle_timeout_sec": 30,
            "id": "playground-s-11-8d8bd822/us-west1/my-natnat-gateway-router/my-natnat-gateway-nat",
            "log_config": [
              {
                "enable": true,
                "filter": "ERRORS_ONLY"
              }
            ],
            "max_ports_per_vm": 0,
            "min_ports_per_vm": 0,
            "name": "my-natnat-gateway-nat",
            "nat_ip_allocate_option": "AUTO_ONLY",
            "project": "playground-s-11-8d8bd822",
            "region": "us-west1",
            "router": "my-natnat-gateway-router",
            "source_subnetwork_ip_ranges_to_nat": "ALL_SUBNETWORKS_ALL_IP_RANGES",
            "tcp_established_idle_timeout_sec": 1200,
            "tcp_time_wait_timeout_sec": 120,
            "tcp_transitory_idle_timeout_sec": 30,
            "udp_idle_timeout_sec": 30
          },
          "dependencies": [
            "module.nat_gateway.google_compute_router.nat_router",
            "module.vpc.google_compute_network.vpc_network"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "google_compute_network",
      "name": "vpc_network",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "auto_create_subnetworks": true,
            "delete_default_routes_on_create": false,
            "description": "loppp",
            "enable_ula_internal_ipv6": false,
            "id": "projects/playground-s-11-8d8bd822/global/networks/lo",
            "mtu": 0,
            "name": "lo",
            "network_firewall_policy_enforcement_order": "AFTER_CLASSIC_FIREWALL",
            "numeric_id": "3129598493939921042",
            "project": "playground-s-11-8d8bd822",
            "routing_mode": "REGIONAL",
            "self_link": "https://www.googleapis.com/compute/v1/projects/playground-s-11-8d8bd822/global/networks/lo"
          }
        }
      ]
    }
  ]
}